--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
 
+    <link rel="preload" href="%PUBLIC_URL%/fonts/Rubik/Rubik-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin> <!-- Preload the Rubik font -->
+
     <style>
       #root {
         font-family: Rubik, sans-serif;
@@ -30,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
